SLI-1956 Fix file exclusions